Fix filter display on mobile.

--- a/src/app/styles/components/_ranking-filter.scss
+++ b/src/app/styles/components/_ranking-filter.scss
@@ -3,12 +3,11 @@
 .filter-container {
   display: flex;
   flex-direction: column;
-  column-gap: pxToRem(8);
+  grid-gap: pxToRem(8) pxToRem(24);
   background: #fff;
   padding: pxToRem(5);
   
   @include breakpoints('medium+') {
-    justify-content: space-around;
     flex-direction: row;
   }
 
@@ -16,11 +15,22 @@
     margin-top: pxToRem(12);
   }
 
-  .radio-container, .checkbox-container {
+  .filter-type-container, .filter-competition-container {
     background: #fff;
     border: pxToRem(1) solid var(--color-secondary-blue);
     border-radius: pxToRem(8);
-    padding: pxToRem(5);
+    padding: pxToRem(4);
+    padding-bottom: 0;
     margin-top: pxToRem(4);
+  }
+
+  .checkbox-container {
+    @include breakpoints('medium+') {
+      display: inline-block;
+
+      &:not(:last-child) {
+        margin-right: pxToRem(4);
+      }
+    }
   }
 }
