--- a/src/app/styles/components/partials/_input-checkbox.scss
+++ b/src/app/styles/components/partials/_input-checkbox.scss
@@ -4,24 +4,21 @@ input[type="checkbox"] {
   display: none;
 
   & + label {
-    border: pxToRem(1) solid transparent;
     border-radius: pxToRem(4);
     display: inline-block;
     height: pxToRem(24);
     line-height: pxToRem(24);
     padding: 0px pxToRem(10);
     width: auto;
+    border: 1px solid var(--color-secondary-blue);
+    margin-bottom: pxToRem(4);
 
     &:hover {
       cursor: pointer;
     }
-  }
-
-  & + label {
-    border: 1px solid var(--color-secondary-blue);
 
     &:not(:last-child) {
-      margin-right: pxToRem(8);
+      margin-right: pxToRem(4);
     }
   }
 
